--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Curso Git</title>
 </head>
 <body>
-    <h2>Minha página inicial</h2>
+    <h2>Minha página inicial, sou brabo</h2>
+    <h3>Show, top</h3>
 </body>
 </html>
